# IVideo

./: build.gradle  config.gradle  gradle.properties  settings.gradle
AVCore/: build.gradle
AVCore/src/androidTest/java/com/ivideo/avcore/: ExampleInstrumentedTest.java
AVCore/src/main/: AndroidManifest.xml
AVCore/src/main/cpp/: CMakeLists.txt  FFmpeg.cpp  Rtmp.cpp  Rtmp.h  YUVUtils.cpp  avcore.cpp  publish_jni.cpp
AVCore/src/main/cpp/librtmp/: Makefile
AVCore/src/main/res/raw/: antique.glsl  beauty.glsl  default_fragment.glsl
AVCore/src/test/java/com/ivideo/avcore/: ExampleUnitTest.java
MVICore/: build.gradle
MVICore/src/androidTest/java/org/jash/mvicore/: ExampleInstrumentedTest.kt
MVICore/src/main/java/org/jash/mvicore/: BaseActivity.kt  BaseFragment.kt
MVICore/src/test/java/org/jash/mvicore/: ExampleUnitTest.kt
app/: build.gradle
app/src/androidTest/java/org/jash/ivideo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/jash/ivideo/: App.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/org/jash/ivideo/: ExampleUnitTest.kt
common/: build.gradle
common/src/main/java/org/jash/common/: BaseApplication.kt  ImageUtil.kt  LogUtil.kt
gradle/wrapper/: gradle-wrapper.properties
homepage/: build.gradle
homepage/src/main/: AndroidManifest.xml
homepage/src/main/res/drawable/: ic_comment.xml
homepage/src/main/res/layout/: activity_details.xml  activity_home.xml  fragment_comment.xml  fragment_desc.xml  fragment_flow.xml  fragment_homepage.xml  fragment_recommend.xml  fragment_simple_type.xml  item_comment.xml  item_video.xml
homepage/src/main/res/menu/: home_menu.xml
live/: build.gradle
live/src/main/: AndroidManifest.xml
live/src/main/res/layout/: activity_live.xml  activity_publish.xml  fragment_live_room.xml  item_room.xml  join_leave_item.xml  msg_left_item.xml
mine/: build.gradle
mine/src/main/: AndroidManifest.xml
mine/src/main/res/layout/: activity_login.xml  activity_register.xml  fragment_mine.xml
network/: build.gradle
(+120 files in other folders)
